--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -19,7 +19,7 @@
     </style>
 
     <div class="example-wrapper">
-        <h1>Hello
+        <h1>Hello {{' you '}}
              ✅</h1>
 
         This friendly message is coming from:
@@ -35,6 +35,8 @@
                 </code>
             </li>
         </ul>
+
+        {{dump()}}
         
 
         {# {{app.user}}
