--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -34,6 +34,7 @@
 				</code>
 			</li>
 		</ul>
+		<a href="{{path('login')}}">awesome link</a>
 		{# {{ form(form) }} #}
 
 			{# user is logged in #}
