--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,7 +1,7 @@
 {# templates/default/index.html.twig #}
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello
+{% block title %}Hola
 {% endblock %}
 
 {% block body %}
